Update Xtext (with examples) according to the last version of TyphonML)

--- a/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.edit/plugin.properties
@@ -166,3 +166,11 @@ _UI_DataTypeItem_implementation_feature = Implementation
 _UI_DataTypeImplementationPackage_location_feature = Location
 _UI_Entity_identifer_feature = Identifer
 _UI_EntityIdentifier_attributes_feature = Attributes
+_UI_RenameEntity_type = Rename Entity
+_UI_ChangeRelationContainement_type = Change Relation Containement
+_UI_RenameAttribute_attributeToRename_feature = Attribute To Rename
+_UI_RemoveIdentifier_entityIdentifier_feature = Entity Identifier
+_UI_RenameEntity_entityToRename_feature = Entity To Rename
+_UI_RenameEntity_newEntityName_feature = New Entity Name
+_UI_ChangeRelationContainement_relation_feature = Relation
+_UI_ChangeRelationContainement_newContainment_feature = New Containment
