Update TyphonMM with id mandatory attribute

--- a/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.edit/plugin.properties
@@ -174,3 +174,4 @@ _UI_RenameEntity_entityToRename_feature = Entity To Rename
 _UI_RenameEntity_newEntityName_feature = New Entity Name
 _UI_ChangeRelationContainement_relation_feature = Relation
 _UI_ChangeRelationContainement_newContainment_feature = New Containment
+_UI_Entity_id_feature = Id
