--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<modules>
 		<module>it.univaq.disim.typhonml</module>
 		<module>it.univaq.disim.typhon.acceleo</module>
+		<module>it.univaq.disim.typhonml.design</module>
 		<module>it.univaq.disim.typhonml.ui</module>
 		<module>it.univaq.disim.typhonml.edit</module>
 		<module>it.univaq.disim.typhonml.editor</module>
