Added/refined change operators for conceptual elements

--- a/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.edit/plugin.properties
@@ -177,3 +177,6 @@ _UI_NlpTaskType_RelationExtraction_literal = RelationExtraction
 _UI_NlpTaskType_EventExtraction_literal = EventExtraction
 _UI_NlpTaskType_CoreferenceResolution_literal = CoreferenceResolution
 _UI_Entity_fretextAttributes_feature = Fretext Attributes
+_UI_AddRelation_owner_feature = Owner
+_UI_AddRelation_ownerEntity_feature = Owner Entity
+_UI_AddAttribute_ownerEntity_feature = Owner Entity
