Added the support for additional change operators

--- a/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.edit/plugin.properties
@@ -180,3 +180,18 @@ _UI_Entity_fretextAttributes_feature = Fretext Attributes
 _UI_AddRelation_owner_feature = Owner
 _UI_AddRelation_ownerEntity_feature = Owner Entity
 _UI_AddAttribute_ownerEntity_feature = Owner Entity
+_UI_AddAttributesToIndex_type = Add Attributes To Index
+_UI_RemoveAttributesToIndex_type = Remove Attributes To Index
+_UI_RenameCollection_type = Rename Collection
+_UI_AddCollectionIndex_type = Add Collection Index
+_UI_DropCollectionIndex_type = Drop Collection Index
+_UI_AddAttributesToIndex_table_feature = Table
+_UI_AddAttributesToIndex_attributes_feature = Attributes
+_UI_RemoveAttributesToIndex_table_feature = Table
+_UI_RemoveAttributesToIndex_attribute_feature = Attribute
+_UI_RenameCollection_collectionToRename_feature = Collection To Rename
+_UI_RenameCollection_newName_feature = New Name
+_UI_AddCollectionIndex_collection_feature = Collection
+_UI_AddCollectionIndex_attributes_feature = Attributes
+_UI_DropCollectionIndex_collection_feature = Collection
+_UI_RemoveAttributesToIndex_attributes_feature = Attributes
