--- a/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.edit/plugin.properties
@@ -195,3 +195,32 @@ _UI_NlpTaskType_NamedEntityRecognition_literal = NamedEntityRecognition
 _UI_NlpTaskType_RelationExtraction_literal = RelationExtraction
 _UI_NlpTaskType_EventExtraction_literal = EventExtraction
 _UI_NlpTaskType_CoreferenceResolution_literal = CoreferenceResolution
+_UI_Bag_type = Bag
+_UI_Map_type = Map
+_UI_OclAny_type = Ocl Any
+_UI_OclComparable_type = Ocl Comparable
+_UI_OclElement_type = Ocl Element
+_UI_OclEnumeration_type = Ocl Enumeration
+_UI_OclInvalid_type = Ocl Invalid
+_UI_OclLambda_type = Ocl Lambda
+_UI_OclMessage_type = Ocl Message
+_UI_OclSelf_type = Ocl Self
+_UI_OclState_type = Ocl State
+_UI_OclStereotype_type = Ocl Stereotype
+_UI_OclSummable_type = Ocl Summable
+_UI_OclTuple_type = Ocl Tuple
+_UI_OclType_type = Ocl Type
+_UI_OclVoid_type = Ocl Void
+_UI_OrderedCollection_type = Ordered Collection
+_UI_OrderedSet_type = Ordered Set
+_UI_Sequence_type = Sequence
+_UI_Set_type = Set
+_UI_UniqueCollection_type = Unique Collection
+_UI_Collection_elementType_feature = Element Type
+_UI_Collection_lower_feature = Lower
+_UI_Collection_upper_feature = Upper
+_UI_Map_keyType_feature = Key Type
+_UI_Map_valueType_feature = Value Type
+_UI_OclElement_oclContainer_feature = Ocl Container
+_UI_OclElement_oclContents_feature = Ocl Contents
+_UI_OclInvalid_oclBadProperty_feature = Ocl Bad Property
