--- a/it.univaq.disim.typhonml.editor/plugin.properties
+++ b/it.univaq.disim.typhonml.editor/plugin.properties
@@ -51,3 +51,9 @@ _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
 
+_UI_OclstdlibEditor_menu = &Oclstdlib Editor
+_UI_OclstdlibModelWizard_label = Oclstdlib Model
+_UI_OclstdlibModelWizard_description = Create a new Oclstdlib model
+_UI_OclstdlibEditor_label = Oclstdlib Model Editor
+_UI_OclstdlibEditorFilenameDefaultBase = My
+_UI_OclstdlibEditorFilenameExtensions = oclstdlib
