--- a/it.univaq.disim.typhonml.evaluator/pom.xml
+++ b/it.univaq.disim.typhonml.evaluator/pom.xml
@@ -21,7 +21,16 @@
 	    <artifactId>org.eclipse.emf.ecore</artifactId>
 	    <version>2.18.0</version>
 	</dependency>	
-
+  <dependency>
+      <groupId>org.eclipse.epsilon</groupId>
+      <artifactId>epsilon-core</artifactId>
+      <version>1.5.1</version>
+  </dependency>
+  <dependency>
+      <groupId>org.eclipse.epsilon</groupId>
+      <artifactId>epsilon-emf</artifactId>
+      <version>1.5.1</version>
+  </dependency>
   </dependencies>
   
   <build>
