Migrating to tycho architecture

--- a/it.univaq.disim.typhonml.parent/bundles/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/pom.xml
@@ -17,5 +17,8 @@
 		<module>it.univaq.disim.typhonml.edit</module>
 		<module>it.univaq.disim.typhonml.editor</module>
 		<module>it.univaq.disim.typhonml.xtext</module>
+		<module>it.univaq.disim.typhon.acceleo</module>
+		<module>it.univaq.disim.typhonml.evaluator</module>
+		<module>it.univaq.disim.typhonml.ui</module>
 	</modules>
 </project>
