it is related to issues #15 #19

--- a/it.univaq.disim.typhonml.parent/bundles/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/pom.xml
@@ -27,5 +27,6 @@
 		<module>it.univaq.disim.typhon.acceleo</module>
 		<module>it.univaq.disim.typhonml.evaluator</module>
 		<module>it.univaq.disim.typhonml.ui</module>
+		<module>it.univaq.disim.typhonml.usage</module>
 	</modules>
 </project>
