Added tmlx model extension

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.editor/plugin.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.editor/plugin.xml
@@ -28,7 +28,7 @@
             id="typhonml.presentation.TyphonmlEditorID"
             name="%_UI_TyphonmlEditor_label"
             icon="icons/full/obj16/TyphonmlModelFile.gif"
-            extensions="*"
+            extensions="tmlx"
             class="typhonml.presentation.TyphonmlEditor"
             contributorClass="typhonml.presentation.TyphonmlActionBarContributor">
       </editor>
