--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext.ide/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext.ide/pom.xml
@@ -12,7 +12,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
-	<artifactId>it.univaq.disim.typhonml.xtext.ui</artifactId>
+	<artifactId>it.univaq.disim.typhonml.xtext.ide</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
 
