--- a/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.configuration/pom.xml
+++ b/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.configuration/pom.xml
@@ -15,25 +15,29 @@
     <properties>
         <tycho.version>1.4.0</tycho.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <eclipse-repo.url>http://download.eclipse.org/releases/2018-12</eclipse-repo.url>
-        <xtext.version>2.16.0</xtext.version>
+        <eclipse-repo.url>http://download.eclipse.org/releases/2019-09/</eclipse-repo.url>
+        <xtext.version>2.19.0</xtext.version>
         <!-- Skip the deployment here, submodules can override this property -->
         <!--maven.deploy.skip>true</maven.deploy.skip-->
     </properties>
     
-     <repositories>
-  <repository>
-   <id>eclipse-release</id>
-   <url>${eclipse-repo.url}</url>
-   <layout>p2</layout>
-  </repository>
-  <repository>
-    <id>eclipse-epsilon</id>
-    <url>http://download.eclipse.org/epsilon/updates/</url>
-    <layout>p2</layout>
-</repository>
-
- </repositories>
+    <repositories>
+        <repository>
+            <id>eclipse-release</id>
+            <url>${eclipse-repo.url}</url>
+            <layout>p2</layout>
+        </repository>
+        <repository>
+            <id>eclipse-epsilon</id>
+            <url>http://download.eclipse.org/epsilon/updates/</url>
+            <layout>p2</layout>
+        </repository>
+        <repository>
+            <id>Xtext Update Site</id>
+            <layout>p2</layout>
+            <url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext.version}/</url>
+        </repository>
+    </repositories>
 
     <build>
         
@@ -86,34 +90,6 @@
                         </environments>
                     </configuration>
                 </plugin>
-                <!-- enable source feature generation -->
-                <!--plugin>
-                <groupId>org.eclipse.tycho.extras</groupId>
-                <artifactId>tycho-source-feature-plugin</artifactId>
-                <version>${tycho.version}</version>
-                <executions>
-                    <execution>
-                        <id>source-feature</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>source-feature</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-source-plugin</artifactId>
-                <version>${tycho.version}</version>
-                <executions>
-                    <execution>
-                        <id>plugin-source</id>
-                        <goals>
-                            <goal>plugin-source</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin-->
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
