--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext.ui/build.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext.ui/build.properties
@@ -5,3 +5,7 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml
 bin.excludes = **/*.xtend
+src.includes = xtend-gen/,\
+               src/,\
+               src-gen/,\
+               target/
