pom build task has been changed

--- a/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.configuration/pom.xml
+++ b/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.configuration/pom.xml
@@ -43,22 +43,8 @@
         
         <plugins>
             <!--Enable the replacement of the SNAPSHOT version based on the last commit-->
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-packaging-plugin</artifactId>
-                <version>${tycho.version}</version>
+            
                 
-                
-                </plugin>
-                <!-- Skip the install, since we do not need the artifacts in our local mvn repo -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </plugin>
                 <plugin>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>tycho-maven-plugin</artifactId>
@@ -70,24 +56,8 @@
                     <artifactId>target-platform-configuration</artifactId>
                     <version>${tycho.version}</version>
                     <configuration>
-                        
-                        <environments>
-                            <environment>
-                                <os>linux</os>
-                                <ws>gtk</ws>
-                                <arch>x86_64</arch>
-                            </environment>
-                            <environment>
-                                <os>win32</os>
-                                <ws>win32</ws>
-                                <arch>x86_64</arch>
-                            </environment>
-                            <environment>
-                                <os>macosx</os>
-                                <ws>cocoa</ws>
-                                <arch>x86_64</arch>
-                            </environment>
-                        </environments>
+                        <resolver>p2</resolver>
+                        <pomDependencies>consider</pomDependencies>
                     </configuration>
                 </plugin>
             <plugin>
