--- a/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.update/pom.xml
+++ b/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.update/pom.xml
@@ -8,7 +8,15 @@
 	<artifactId>it.univaq.disim.typhonml.update</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
-
+	<build>
+		<plugins>
+			<plugin>
+         	<groupId>org.eclipse.tycho</groupId>
+         	<artifactId>tycho-p2-repository-plugin</artifactId>
+         	<version>${tycho.version}</version>
+      	</plugin>
+	</plugins>
+	</build>
 	<properties>
 		<!-- Do not skip the deployment here -->
 		<maven.deploy.skip>false</maven.deploy.skip>
