Update .gitignore for xtext generated files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin/
 target/
 # Log file
 *.log
+xtend-gen/
 
 # BlueJ files
 *.ctxt
@@ -25,5 +26,5 @@ hs_err_pid*
 
 .settings/
 .metadata/
-.classpath
-.project
+#.classpath
+#.project
