--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.ui/plugin.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.ui/plugin.xml
@@ -59,7 +59,7 @@
 				      <iterate
 				           ifEmpty="false">
 				         <adapt type="org.eclipse.core.resources.IResource">
-				              <test property="org.eclipse.core.resources.extension" value="tmlx" />
+				              <test property="org.eclipse.core.resources.extension" value="xmi" />
 				         </adapt>
 				      </iterate>
 				   </with>
