Added tags, changed graphical and textual editor

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
@@ -234,3 +234,7 @@ _UI_SplitEntityHorizontal_entity1_feature = Entity1
 _UI_SplitEntityHorizontal_entity2name_feature = Entity2name
 _UI_SplitEntityHorizontal_attribute_feature = Attribute
 _UI_SplitEntityHorizontal_expression_feature = Expression
+_UI_FunctionalTag_type = Functional Tag
+_UI_NFunctionalTag_type = NFunctional Tag
+_UI_Entity_functionalTags_feature = Functional Tags
+_UI_Entity_nfunctionalTags_feature = Nfunctional Tags
