Switched from WordNet JWNL to WordNet extJWNL

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/build.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/build.properties
@@ -1,16 +1,23 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
+			   .,\
                lib/,\
-               configuration/,\
-               WordNet/,\
-               lib/jwnl.jar,\
-               lib/commons-logging-1.2.jar
+ 			   lib/extjwnl-2.0.2.jar,\
+ 			   lib/extjwnl-data-wn31-1.2.jar,\
+               lib/concurrentlinkedhashmap-lru-1.3.2.jar,\
+ 			   lib/slf4j-api-1.7.26.jar
 bin.excludes = lib/.DS_Store
-source.lib/jwnl.jar = src/
-jars.compile.order = lib/commons-logging-1.2.jar,\
-                     lib/jwnl.jar,\
+source.lib/extjwnl-2.0.2.jar = src/
+source.lib/extjwnl-data-wn31-1.2.jar = src/
+source.lib/slf4j-api-1.7.26.jar = src/
+source.lib/concurrentlinkedhashmap-lru-1.3.2.jar = src/
+jars.compile.order = lib/extjwnl-2.0.2.jar,\
+                     lib/slf4j-api-1.7.26.jar,\
+                     lib/extjwnl-data-wn31-1.2.jar
+source.. = 
+jars.compile.order = lib/slf4j-api-1.7.26.jar,\
+                     lib/concurrentlinkedhashmap-lru-1.3.2.jar,\
+                     lib/extjwnl-2.0.2.jar,\
+                     lib/extjwnl-data-wn31-1.2.jar,\
                      .
-source.lib/commons-logging-1.2.jar = src/ 
 
