--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/.classpath
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/.classpath
@@ -3,8 +3,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="configuration"/>
-	<classpathentry kind="lib" path="lib/jwnl.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/extjwnl-2.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/extjwnl-data-wn31-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/concurrentlinkedhashmap-lru-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.26.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
