Update project with Timestamp datatype generation

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/build.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/build.properties
@@ -14,10 +14,10 @@ source.lib/concurrentlinkedhashmap-lru-1.3.2.jar = src/
 jars.compile.order = lib/extjwnl-2.0.2.jar,\
                      lib/slf4j-api-1.7.26.jar,\
                      lib/extjwnl-data-wn31-1.2.jar
-source.. = 
-jars.compile.order = lib/slf4j-api-1.7.26.jar,\
-                     lib/concurrentlinkedhashmap-lru-1.3.2.jar,\
+source.. = src/
+jars.compile.order = lib/concurrentlinkedhashmap-lru-1.3.2.jar,\
                      lib/extjwnl-2.0.2.jar,\
                      lib/extjwnl-data-wn31-1.2.jar,\
+                     lib/slf4j-api-1.7.26.jar,\
                      .
 
