--- a/it.univaq.disim.typhonml.parent/bundles/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/pom.xml
@@ -24,10 +24,13 @@
 		<module>it.univaq.disim.typhonml.xtext.ui.tests</module>-->
 		<module>it.univaq.disim.typhonml.xtext.ui</module>
 		<module>it.univaq.disim.typhon.acceleo</module>
-		<module>it.univaq.disim.typhonml.model_analysis</module>
+		
 		<module>it.univaq.disim.typhonml.mapping_generation</module>
 		<module>it.univaq.disim.typhonml.data_access_layer</module>
+		<module>it.univaq.disim.typhonml.repository	</module>
 		<module>it.univaq.disim.typhonml.ui</module>
-		<module>it.univaq.disim.typhonml.usage</module>
+		<module>it.univaq.disim.typhonml.maven_dep</module>
+		<module>it.univaq.disim.typhonml.model_analysis</module>
+		<!--<module>it.univaq.disim.typhonml.usage</module>-->
 	</modules>
 </project>
