Update all the project with new handled libraries for smell check

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/build.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.model_analysis/build.properties
@@ -1,20 +1,10 @@
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               lib/,\
-               lib/extjwnl-2.0.2.jar,\
-               lib/extjwnl-data-wn31-1.2.jar,\
-               lib/concurrentlinkedhashmap-lru-1.3.2.jar,\
-               lib/slf4j-api-1.7.26.jar
+               lib/
 bin.excludes = lib/.DS_Store
-source.lib/extjwnl-2.0.2.jar = src/
-source.lib/extjwnl-data-wn31-1.2.jar = src/
-source.lib/slf4j-api-1.7.26.jar = src/
-source.lib/concurrentlinkedhashmap-lru-1.3.2.jar = src/
 jars.compile.order = lib/extjwnl-2.0.2.jar,\
                      lib/slf4j-api-1.7.26.jar,\
                      lib/extjwnl-data-wn31-1.2.jar
-source.. = src/
 jars.compile.order = lib/concurrentlinkedhashmap-lru-1.3.2.jar,\
                      lib/extjwnl-2.0.2.jar,\
                      lib/extjwnl-data-wn31-1.2.jar,\
