Issue #35 : added maxSize attribute (optional)  in primitive data type

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
@@ -279,3 +279,5 @@ _UI_PrimitiveDataTypeAttribute_type_feature = Type
 _UI_CustomDataTypeAttribute_type_feature = Type
 _UI_ChangePrimitiveDataTypeAttribute_newType_feature = New Type
 _UI_ChangeCustomDataTypeAttribute_newType_feature = New Type
+_UI_PrimitiveDataTypeAttribute_maxSize_feature = Max Size
+_UI_ChangePrimitiveDataTypeAttribute_maxSize_feature = Max Size
