Added OpenAPI generator

--- a/it.univaq.disim.typhonml.parent/bundles/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/pom.xml
@@ -24,6 +24,7 @@
 		<module>it.univaq.disim.typhonml.xtext.ui.tests</module>-->
 		<module>it.univaq.disim.typhonml.xtext.ui</module>
 		<module>it.univaq.disim.typhon.acceleo</module>
+		<module>it.univaq.disim.typhonml.acceleo</module>
 		
 		<module>it.univaq.disim.typhonml.mapping_generation</module>
 		<module>it.univaq.disim.typhonml.data_access_layer</module>
