GraphDB has been supported

--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
@@ -230,3 +230,4 @@ _UI_Cardinality_zero_one_literal = zero_one
 _UI_Cardinality_one_literal = one
 _UI_Cardinality_zero_many_literal = zero_many
 _UI_Cardinality_one_many_literal = one_many
+_UI_GraphEdge_entity_feature = Entity
