--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.ui/plugin.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.ui/plugin.xml
@@ -19,7 +19,7 @@
 	        </command>
 	        <command
 	                  commandId="TMLGeneratorHandler"
-	                  label="Generate microservices architecture"
+	                  label="Generate OpenAPI specification"
 	                  style="push"
 	                  tooltip="Generate">
 	        </command>
@@ -49,7 +49,7 @@
 	        </command>
 	        <command
 	                  commandId="XMIGeneratorHandler"
-	                  label="Generate microservices architecture"
+	                  label="Generate OpenAPI specification"
 	                  style="push"
 	                  tooltip="Generate">
 	        </command>
