--- a/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.configuration/pom.xml
+++ b/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.configuration/pom.xml
@@ -40,7 +40,24 @@
     </repositories>
 
     <build>
-        
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.acceleo</groupId>
+                    <artifactId>org.eclipse.acceleo.maven</artifactId>
+                    <version>3.5.0-SNAPSHOT</version>
+                     <executions>
+                        <execution>
+                            <id>acceleo-compile</id>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>acceleo-compile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <!--Enable the replacement of the SNAPSHOT version based on the last commit-->
             
